# duplosentido

./: 69-dualsense.rules  Cargo.toml  README.md  build.rs
src/: dualsense.rs  hidapi.rs  lib.rs  mappings.rs  state.rs
src/hidapi/: ffi.rs
src/mappings/: group.rs  state.rs
