[package]
name = "duplosentido"
version = "0.1.0"
authors = ["Miguel Taciano <contact@mtaciano.com>"]
edition = "2021"
description = "A crate for interacting with a DualSense controller"
repository = "https://github.com/mtaciano/duplosenso"
license = "MIT"
publish = false # While it is not complete.

[build-dependencies]
pkg-config = "0.3.30"

[dependencies]
libc = "0.2.155"
thiserror = "1.0.61"
