[package]
name = "duplosentido"
version = "0.1.0"
authors = ["Miguel Taciano <contact@mtaciano.com>"]
edition = "2021"
description = "A crate for easy interactions with the DualSense (PS5) controller"
repository = "https://github.com/mtaciano/duplosentido"
license = "MIT"
publish = false # While it isn't complete.

[build-dependencies]
pkg-config = "0.3.30"

[dependencies]
libc = "0.2.155"
thiserror = "1.0.61"
